kubernetes/istio/service1/service-1-destination-rule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: service1-destination-rule
spec:
  host: service1
  subsets:
  - name: v2
    labels:
      version: v2
