kubernetes/istio/service1/service-1-virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: service1-virtual-service
spec:
  hosts:
  - service1
  gateways:
  - virtual-service-gateway
  http:
  - route:
    - destination:
        host: service1
        subset: v2
